syntax = "proto3";

package grpcLab;

service Bili{rpc HelloGrpc(HelloGrpcReq) returns (HelloGrpcReply){}}

message HelloGrpcReq{
        string name = 1;
        int32 age = 2;
        }

message HelloGrpcReply{
        string result = 1;
        }